Update allowed hosts and CORS origins

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1,vercel.app.com
-CORS_ALLOWED_ORIGINS=http://localhost:8000,http://127.0.0.1:8000,http://vercel.app.com:8000
+ALLOWED_HOSTS=localhost,127.0.0.1,vercel.app.com,solv2.pythonanywhere.com
+CORS_ALLOWED_ORIGINS=http://localhost:8000,http://127.0.0.1:8000,http://solv2.pythonanywhere.com
 CORS_ALLOW_METHODS="POST,GET,PUT,PATCH,OPTIONS,DELETE"
 
 TYPE_DATABASE=SQLITE
